<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191818">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        app:layout_constraintBottom_toTopOf="@id/gv_list_coin_favorite"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_date_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/date_example"
            android:textColor="#9c9c9c"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <GridView
        android:id="@+id/gv_list_coin_favorite"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:numColumns="2"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_date"
        tools:listitem="@layout/coin_favorites_item" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/primaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_menu_bottom_moedas"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/botao_para_lista_de_moedas"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_main"
                    android:layout_width="205dp"
                    android:layout_height="50dp"
                    android:layout_gravity="top"
                    android:backgroundTint="@color/primaryColor"
                    android:padding="100dp"
                    android:src="@drawable/ic_baseline_attach_money_24" />

                <TextView
                    android:id="@+id/tv_btn_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom|center"
                    android:text="@string/ll_tv_menu_bottom_moedas"
                    android:textColor="#9c9c9c" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_menu_bottom_adicionadas"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/botao_para_moedas_favoritas"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/primaryColor"
                    android:padding="100dp"
                    android:src="@drawable/ic_baseline_star_24" />

                <TextView
                    android:id="@+id/tv_btn_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom|center"
                    android:text="@string/ll_tv_menu_bottom_adicionadas"
                    android:textColor="#9c9c9c" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>