<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_coin_favorites_externo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@color/colorSecondary"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_coin_name_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_title_bitcoin"
            android:textAlignment="center"
            android:textColor="#F3F3F3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_coin_sigla_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btc_title_tv"
            android:textAlignment="center"
            android:textColor="#F3F3F3"
            app:layout_constraintLeft_toLeftOf="@id/tv_coin_name_favorite"
            app:layout_constraintRight_toRightOf="@id/tv_coin_name_favorite"
            app:layout_constraintTop_toBottomOf="@id/tv_coin_name_favorite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/coin_value_hint_zero"
            android:textAlignment="center"
            android:textColor="#F3F3F3"
            app:layout_constraintLeft_toLeftOf="@id/tv_coin_sigla_favorite"
            app:layout_constraintRight_toRightOf="@id/tv_coin_sigla_favorite"
            app:layout_constraintTop_toBottomOf="@id/tv_coin_sigla_favorite" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintRight_toRightOf="@id/cl_coin_favorites_externo"
        app:layout_constraintTop_toTopOf="@id/cl_coin_favorites_externo"
        tools:src="@tools:sample/avatars" />


</androidx.constraintlayout.widget.ConstraintLayout>

