<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_primary"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:background="@color/colorSecondary"
        app:layout_constraintBottom_toTopOf="@id/cl_secudary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/ll_button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="45dp"
            android:background="@color/colorSecondary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorSecondary"
                android:src="@drawable/ic_baseline_arrow_back_ios_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_btn_voltar"
                android:textColor="#F3F3F3"
                android:textSize="18sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/tv_title_btc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/btc_title_tv"
            android:textColor="#F3F3F3"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_coin"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/iv_content_description_simbolo_da_moeda"
            app:layout_constraintLeft_toLeftOf="@id/tv_title_btc"
            app:layout_constraintRight_toRightOf="@id/tv_title_btc"
            app:layout_constraintTop_toBottomOf="@id/tv_title_btc"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/iv_favorite"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="10dp"
            app:layout_constraintLeft_toRightOf="@+id/iv_coin"
            app:layout_constraintTop_toTopOf="@+id/iv_coin"
            app:tint="#F3F3F3"
            android:src="@drawable/ic_baseline_star_24"/>

        <TextView
            android:id="@+id/tv_coin_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/coin_value_hint_zero"
            android:textAlignment="center"
            android:textColor="#F3F3F3"
            android:textColorHint="#F3F3F3"
            android:textSize="40sp"
            android:textStyle="normal"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintLeft_toLeftOf="@id/iv_coin"
            app:layout_constraintRight_toRightOf="@id/iv_coin"
            app:layout_constraintTop_toBottomOf="@id/iv_coin" />

        <Button
            android:id="@+id/btn_add_favorite"
            android:layout_width="270dp"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/colorSecondary"
            android:text="@string/btn_adicionar"
            android:textColor="#F3F3F3"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_coin_value"
            app:layout_constraintRight_toRightOf="@id/tv_coin_value"
            app:layout_constraintTop_toBottomOf="@id/tv_coin_value" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_secudary"
        android:layout_width="match_parent"
        android:layout_height="375dp"
        android:background="#191818"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_primary">

        <TextView
            android:id="@+id/tv_volumes_negociados"
            style="@style/TextView_volumes_negociados"
            android:layout_marginTop="20dp"
            android:text="@string/volumes_negociados"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_ultima_hora"
            style="@style/TextView_volumes_negociados"
            android:layout_marginStart="30dp"
            android:text="@string/ltima_hora"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_volumes_negociados" />

        <TextView
            android:id="@+id/tv_coin_value_ultima_hora"
            style="@style/TextView_volumes_negociados"
            android:layout_marginEnd="30dp"
            android:hint="@string/coin_value_hint_zero"
            android:textAlignment="textEnd"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_volumes_negociados" />

        <TextView
            android:id="@+id/tv_ultimo_mes"
            style="@style/TextView_volumes_negociados"
            android:text="@string/ultimo_mes"
            app:layout_constraintLeft_toLeftOf="@id/tv_ultima_hora"
            app:layout_constraintTop_toBottomOf="@id/tv_ultima_hora" />

        <TextView
            android:id="@+id/tv_coin_value_ultimo_mes"
            style="@style/TextView_volumes_negociados"
            android:hint="@string/coin_value_hint_zero"
            android:textAlignment="textEnd"
            app:layout_constraintLeft_toLeftOf="@id/tv_coin_value_ultima_hora"
            app:layout_constraintTop_toBottomOf="@id/tv_coin_value_ultima_hora" />

        <TextView
            android:id="@+id/tv_ultimo_ano"
            style="@style/TextView_volumes_negociados"
            android:text="@string/ultimo_ano"
            app:layout_constraintLeft_toLeftOf="@id/tv_ultimo_mes"
            app:layout_constraintTop_toBottomOf="@id/tv_ultimo_mes" />

        <TextView
            android:id="@+id/tv_coin_value_ultimo_ano"
            style="@style/TextView_volumes_negociados"
            android:hint="@string/coin_value_hint_zero"
            android:textAlignment="textEnd"
            app:layout_constraintLeft_toLeftOf="@id/tv_coin_value_ultimo_mes"
            app:layout_constraintTop_toBottomOf="@id/tv_coin_value_ultimo_mes" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@color/primaryColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_menu_bottom_moedas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_main"
                        android:layout_width="205dp"
                        android:layout_height="50dp"
                        android:layout_gravity="top"
                        android:backgroundTint="@color/primaryColor"
                        android:padding="100dp"
                        android:src="@drawable/ic_baseline_attach_money_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="bottom|center"
                        android:text="@string/ll_tv_menu_bottom_moedas"
                        android:textColor="#9c9c9c" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/ll_menu_bottom_adicionadas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:backgroundTint="@color/primaryColor"
                        android:padding="100dp"
                        android:src="@drawable/ic_baseline_star_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="bottom|center"
                        android:text="@string/ll_tv_menu_bottom_adicionadas"
                        android:textColor="#9c9c9c" />

                </LinearLayout>


            </LinearLayout>

        </com.google.android.material.bottomnavigation.BottomNavigationView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

